# UQ-SeisSol

./: .clang-tidy  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  flow.md
.github/workflows/: cmake.yml
analysis/: FindSamples.py  LogDensity.py  PlotHistory.py  PlotScaling.py  PlotTraces.py  plot_history.py
example/: example.yaml  material_exact.yaml  material_template.yaml  parameters.par  submit.sh  uq.yaml
example/mesh/: coarse.geo  fine.geo  reference.geo
example/source/: source.srf
rapidTesting/: README.md  SeisSol_Release_dhsw_6_elastic  job.scp  parameters.par  parameters_0.par  submit.sh  uq.yaml
rapidTesting/mesh/: fine.geo
rapidTesting/source/: generate_and_convert_source.sh  rconv  source.nrf  source.srf  source2.nrf
src/: main.cpp
src/IO/: ChainParameterWriter.cpp  ChainParameterWriter.h  MaterialParameterWriter.cpp  MaterialParameterWriter.h  ParameterReader.cpp  ParameterReader.h  ReceiverReader.cpp  ReceiverReader.h
src/Reader/: ParameterReader.cpp  ParameterReader.h  ReceiverReader.cpp  ReceiverReader.h
src/SeisSol/: FusedReceiver.cpp  FusedReceiver.h  Receiver.cpp  Receiver.h  ReceiverDB.cpp  ReceiverDB.h  ReceiverList.cpp  ReceiverList.h  Runner.cpp  Runner.h  UQSeisSolFactory.cpp  UQSeisSolFactory.h
src/UQ/: MIComponentFactory.cpp  MIComponentFactory.h  MIInterpolation.cpp  MIInterpolation.h  SamplingProblem.cpp  SamplingProblem.h
utilities/: README.md  format-all-repo  pre-commit  run-clang-tidy.py
